Updates site name and some temporal description

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,5 @@
   La hora actual es: <%= Time.now %>
 </p>
 <p>
-  El sitio se encuentra en construcción en este momento...
+  Recibe opiniones, comentarios, testimonios, felicitaciones, revisiones y quejas de tus clientes en piloto automático
 </p>
