--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,100 @@
-<h2>Bienvenidos a valoralo.mx</h2>
-<p>
-  La hora actual es: <%= Time.now %>
-</p>
-<p>
-  Recibe opiniones, comentarios, testimonios, felicitaciones, revisiones y quejas de tus clientes en piloto automático
-</p>
+<div class="content-wrap py-0">
+
+  <div class="section section-curve mt-0 card-customer-service">
+    <div class="container center">
+      <div class="heading-block border-bottom-0">
+        <h1 class="nott fw-semibold card-customer-service__first-title">
+          ¿Es usted el dueño y/o encargado de un negocio?
+        </h1>
+        <h1 class="nott fw-semibold mt-2 card-customer-service__second-title">
+          Hola que tal, <br/>
+          Me presento, mi nombre es Alma Pérez
+        </h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="card border-0 mx-auto rounded customer-support-card">
+      <div class="rounded-top">
+        <%= image_tag 'landing_page/tarjeta-presentacion-valoralo-vuelta.jpg', alt: 'Tarjeta servicio al cliente'%>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mt-6">
+    <div class="heading-block mx-auto border-bottom-0 center section-container-width">
+
+      <iframe width="600"
+              height="400"
+              src="https://www.youtube.com/embed/ismFxR6QImw"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="container clearfix">
+
+      <div class="mx-auto border-bottom-0 center clearfix section-container-width">
+        <h2 class="fw-semibold mb-2 fs-1">
+          Recibe la opinión de tus clientes en piloto automático, por medio de <code class="color">mensaje de texto (SMS)</code>, recuerda que tenemos planes <code class="color">gratuitos</code> sin caducidad.
+        </h2>
+        <p class="mb-3">
+        ¿Te gustaría ser de los primeros en utilizar nuestra herramienta?, o como dirían en Silicon Valley, ser un "Early adopter"?
+        </p>
+        <div class="center">
+          <a class="button button-xlarge ls0 button-rounded button-shadow nott fw-normal"
+            href="https://api.whatsapp.com/send?phone=523121231517&text=Hola%20Valoralo.mx,">
+            Escríbenos por WhatsApp
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="heading-block mx-auto border-bottom-0 center section-container-width">
+      <i class="icon-et-bike d-block h1 mb-4 text-black"></i>
+      <small class="text-black-50 text-uppercase ls3 fw-semibold">¿Cómo solicita la <code class="color">opinión</code> de sus clientes?</small>
+      <h2 class="nott fw-semibold mb-2 fs-1" >
+        Nos gustaría saber si actualmente en su negocio, utilizan alguna <code class="color">Herramienta</code> para gestionar todo lo que <code class="color">sus clientes</code> piensan de su negocio.
+      </h2>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="container clearfix">
+
+      <div class="mx-auto border-bottom-0 center clearfix section-container-width">
+        <h2 class="text-capitalize fw-semibold mb-2 fs-1">Nos encanta compartir artículos</h2>
+        <p class="mb-3">Especialmente, artículos relacionados con la mejora continua, consejos para nuevos emprendedores, entre muchos temas.</p>
+        <div class="center"><div class="button ls0 button-rounded button-border nott fw-normal ">Visitar nuestro Blog (En construcción)</div></div>
+      </div>
+    </div>
+  </div>
+
+  <div id="contact-section" class="section bg-transparent contact-section">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-lg-5">
+          <div class="heading-block border-bottom-0 mb-0">
+            <small class="text-black-50 text-uppercase ls3 fw-semibold">Contáctenos</small>
+            <h2 class="text-capitalize fw-semibold mb-2 fs-1">
+              ¿Tienes alguna duda sobre nuestro software?
+            </h2>
+          </div>
+        </div>
+
+        <div class="col-lg-7 d-inline-block d-sm-inline-flex justify-content-start justify-content-lg-end">
+          <a class="button button-xlarge ls0 button-rounded button-shadow nott fw-normal"
+            href="https://api.whatsapp.com/send?phone=523121231517&text=Hola%20Valoralo.mx,">
+            Escríbenos por WhatsApp
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
