Adds diacritic to valoralo company name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html dir="ltr" lang="es-MX">
   <head>
-    <title>Valoralo.mx | En Valoralo recibe opiniones, felicitaciones, comentarios, quejas, agradecimientos y más en piloto automático</title>
+    <title>Valoralo.mx | En Valóralo recibe opiniones, felicitaciones, comentarios, quejas, agradecimientos y más en piloto automático</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="Valoralo.mx" />
@@ -13,11 +13,6 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Istok+Web:400,700&display=swap" rel="stylesheet" type="text/css" />
-    <!-- <link rel="stylesheet" href="css/bootstrap.css" type="text/css" /> -->
-    <!-- <link rel="stylesheet" href="canvas_styles.css" type="text/css" /> -->
-    <!--  -->
-    <!-- <link rel="stylesheet" href="css/font&#45;icons.css" type="text/css" /> -->
-    <!-- <link rel="stylesheet" href="valoralo_main.css" type="text/css" /> -->
     <!--  -->
   </head>
 
@@ -71,7 +66,7 @@
 
                 <div class="row align-items-center justify-content-between">
                   <div class="col-md-6">
-                    Copyrights &copy; 2022 All Rights Reserved by
+                    Copyrights &copy; <%= Time.zone.now.year %> All Rights Reserved by
                     <a href="https://www.pacientesweb.com">
                       Pacientes Web México
                     </a>
