Removes uppercase for some titles

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
     <div class="container clearfix">
 
       <div class="mx-auto border-bottom-0 center clearfix section-container-width">
-        <h2 class="text-capitalize fw-semibold mb-2 fs-1">Nos encanta compartir artículos</h2>
+        <h2 class="fw-semibold mb-2 fs-1">Nos encanta compartir artículos</h2>
         <p class="mb-3">Especialmente, artículos relacionados con la mejora continua, consejos para nuevos emprendedores, entre muchos temas.</p>
         <div class="center"><div class="button ls0 button-rounded button-border nott fw-normal ">Visitar nuestro Blog (En construcción)</div></div>
       </div>
@@ -80,9 +80,9 @@
     <div class="container">
       <div class="row align-items-center justify-content-between">
         <div class="col-lg-5">
-          <div class="heading-block border-bottom-0 mb-0">
+          <div class="border-bottom-0 mb-0">
             <small class="text-black-50 text-uppercase ls3 fw-semibold">Contáctenos</small>
-            <h2 class="text-capitalize fw-semibold mb-2 fs-1">
+            <h2 class="mb-2 fs-1">
               ¿Tienes alguna duda sobre nuestro software?
             </h2>
           </div>
