New title and options in the main menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
                 <!-- Logo
                   ============================================= -->
                   <div id="logo" class="me-lg-0">
-                    <a href="index.html" class="retina-logo" data-dark-logo="/images/logo_valoralo_black.png">
-                      <%= image_tag "landing_page/logo_valoralo_black.png", alt: "Logo valoralo.mx"%>
+                    <a href="index.html">
+                      <%= image_tag "landing_page/smsforall-horizontal@4x.png", alt: "logo smsforall.org sms for all"%>
                   </div><!-- #logo end -->
 
                   <div id="primary-menu-trigger">
@@ -41,9 +41,9 @@
 
                   <nav class="primary-menu">
                     <ul class="menu-container not-dark one-page-menu">
-                      <li class="menu-item"><a class="menu-link" href=""><div>Precio</div></a></li>
-                      <li class="menu-item"><a class="menu-link" href=""><div>Quienes somos</div></a></li>
-                      <li class="menu-item"><a class="menu-link" href=""><div>Contacto</div></a></li>
+                      <li class="menu-item"><a class="menu-link" href=""><div>You and Me</div></a></li>
+                      <li class="menu-item"><a class="menu-link" href=""><div>Donate</div></a></li>
+                      <li class="menu-item"><a class="menu-link" href=""><div>Contact</div></a></li>
                     </ul>
                   </nav><!-- #primary-menu end -->
               </div>
