--- a/app/assets/stylesheets/valoralo_main.scss
+++ b/app/assets/stylesheets/valoralo_main.scss
@@ -1,56 +1,66 @@
-:root{
-	--theme1: #EAF4F4;
-	--themecolor: #E83C3C;
+:root {
+  --theme1: #EAF4F4;
+  --themecolor: #E83C3C;
 }
 
 /* Custom Header Size
 -----------------------------------------------------------------*/
 .header-size-custom #logo img {
-	height: 70px;
+  height: 50px;
 }
 
 @media (min-width: 992px) {
 
-	.header-size-custom .header-wrap-clone {
-		height: calc( 70px + 1px );
-	}
+  .header-size-custom .header-wrap-clone {
+    height: calc(70px + 1px);
+  }
 
-	#header.header-size-custom + .include-header {
-		margin-top: calc( -70px - 2px );
-	}
+  #header.header-size-custom+.include-header {
+    margin-top: calc(-70px - 2px);
+  }
 
-	.header-size-custom .menu-container > .menu-item > .menu-link {
-		padding-top: 24px;
-		padding-bottom: 24px;
-	}
+  .header-size-custom .menu-container>.menu-item>.menu-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 
 }
 
 .bg1,
 #header,
-#header #header-wrap { background-color: var(--theme1); }
+#header #header-wrap {
+  background-color: var(--theme1);
+}
 
 #content p:not(.lead) {
-	font-size: 15px;
-	line-height: 1.7;
+  font-size: 15px;
+  line-height: 1.7;
 }
 
 .button-shadow:not(:hover) {
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-	transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-1px);
 }
 
 .customer-support-card {
-  box-shadow: 0 32px 46px 2px rgba(0,0,0,0.12);
+  box-shadow: 0 32px 46px 2px rgba(0, 0, 0, 0.12);
   margin-top: -430px;
 }
-.device-xs .ytb-card { margin-top: -310px; }
-.heading-block p { font-size: 17px; }
+
+.device-xs .ytb-card {
+  margin-top: -310px;
+}
+
+.heading-block p {
+  font-size: 17px;
+}
 
 .irs-bar-edge,
 .irs-line-mid,
 .irs-line-left,
-.irs-line-right { background-color: rgba(232, 60, 60, 0.3); }
+.irs-line-right {
+  background-color: rgba(232, 60, 60, 0.3);
+}
 
 @media (max-width: 450px) {
   .card-customer-service {
@@ -71,11 +81,17 @@
     font-size: 14px;
   }
 
-  .ytb-card { max-width: 820px; }
+  .ytb-card {
+    max-width: 820px;
+  }
 }
 
 .section-container-width {
-  max-width: 800px
+  max-width: 800px;
+}
+
+.home-main-video-container {
+  max-width: 800px;
 }
 
 .contact-section {
@@ -97,4 +113,3 @@
   letter-spacing: -1px;
   line-height: 36px;
 }
-
