Upgrades to Ruby 3.2.2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="es-MX">
   <head>
-    <title>Valoralo.mx | En Valóralo recibe opiniones, felicitaciones, comentarios, quejas, agradecimientos y más en piloto automático</title>
+    <title>smsforall.org | Unlimited transactional SMS in México for free - SMS transactionales ilimitados y grátis </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="Valoralo.mx" />
+    <meta name="author" content="smsforall.org" />
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
