--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,8 +19,8 @@
       <div class="rounded-top mx-auto home-main-video-container center">
         <iframe width="600"
                 height="400"
-                src="https://www.youtube.com/embed/CKDJfYAilGk"
-                title="YouTube video player"
+                src="https://www.youtube.com/embed/3fCHS5Vg9pw"
+                title="Sms for all - unlimited almost free transactional SMS messages"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
@@ -33,104 +33,11 @@
 
       <iframe width="600"
               height="400"
-              src="https://www.youtube.com/embed/ismFxR6QImw"
-              title="YouTube video player"
+              src="https://www.youtube.com/embed/3fCHS5Vg9pw"
+              title="Sms for all - unlimited almost free transactional SMS messages"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe>
-    </div>
-  </div>
-  
-  <div class="container">
-
-    <div id="section-pricing" class="page-section p-0 m-0">
-
-      <div id="pricing-switch" class="pricing row col-mb-30 mb-5">
-
-        <div class="col-lg-4 col-md-6">
-
-          <div class="pricing-box text-center">
-            <div class="pricing-title text-uppercase">
-              <h3>Starter</h3>
-            </div>
-            <div class="pricing-price">
-              FREE<span class="price-tenure">Limited Access</span>
-            </div>
-            <div class="pricing-features border-0 bg-transparent">
-              <ul>
-                <li><strong>Full</strong> Access</li>
-                <li><i class="bi-braces"></i> Source Files</li>
-                <li><strong>100</strong> User Accounts</li>
-                <li><strong>1 Year</strong> License</li>
-                <li>Phone &amp; Email Support</li>
-              </ul>
-            </div>
-            <div class="pricing-action">
-              <a href="#modal-get-started" data-lightbox="inline" data-pricing-plan="Starter Plan" class="button button-large button-rounded text-capitalize ls-0" style="border-radius: 23px;">Get Started</a>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-
-          <div class="pricing-box text-center">
-            <div class="pricing-title text-uppercase">
-              <h3>Professional</h3>
-            </div>
-            <div class="pricing-price">
-              <div class="pts-switch-content-left"><span class="price-unit">&dollar;</span>12<span class="price-tenure">Monthly</span></div>
-              <div class="pts-switch-content-right"><span class="price-unit">&dollar;</span>99<span class="price-tenure">Yearly</span></div>
-            </div>
-            <div class="pricing-features border-0 bg-transparent">
-              <ul>
-                <li><strong>Full</strong> Access</li>
-                <li><i class="bi-braces"></i> Source Files</li>
-                <li><strong>1000</strong> User Accounts</li>
-                <li><strong>2 Years</strong> License</li>
-                <li><i class="bi-star-fill"></i>
-                <i class="bi-star-fill"></i>
-                <i class="bi-star-fill"></i>
-                <i class="bi-star-fill"></i>
-                <i class="bi-star-fill"></i></li>
-              </ul>
-            </div>
-            <div class="pricing-action">
-              <div class="pts-switch-content-left"><a href="#modal-get-started" data-lightbox="inline" data-pricing-plan="Professional Monthly Plan" class="button button-large button-rounded text-capitalize ls-0" style="border-radius: 23px;">Start Free Trial</a></div>
-              <div class="pts-switch-content-right"><a href="#modal-get-started" data-lightbox="inline" data-pricing-plan="Professional Yearly Plan" class="button button-large button-rounded text-capitalize ls-0" style="border-radius: 23px;">Start Free Trial</a></div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-4 offset-lg-0 col-md-6 offset-md-3">
-
-          <div class="pricing-box text-center">
-            <div class="pricing-title text-uppercase">
-              <h3>Business</h3>
-            </div>
-            <div class="pricing-price">
-              <div class="pts-switch-content-left"><span class="price-unit">&dollar;</span>19<span class="price-tenure">Monthly</span></div>
-              <div class="pts-switch-content-right"><span class="price-unit">&dollar;</span>149<span class="price-tenure">Yearly</span></div>
-            </div>
-            <div class="pricing-features border-0 bg-transparent">
-              <ul>
-                <li><strong>Full</strong> Access</li>
-                <li><i class="bi-braces"></i> Source Files</li>
-                <li><strong>500</strong> User Accounts</li>
-                <li><strong>3 Years</strong> License</li>
-                <li>Phone &amp; Email Support</li>
-              </ul>
-            </div>
-            <div class="pricing-action">
-              <div class="pts-switch-content-left"><a href="#modal-get-started" data-lightbox="inline" data-pricing-plan="Business Monthly Plan" class="button button-large button-rounded text-capitalize ls-0" style="border-radius: 23px;">Start Free Trial</a></div>
-              <div class="pts-switch-content-right"><a href="#modal-get-started" data-lightbox="inline" data-pricing-plan="Business Yearly Plan" class="button button-large button-rounded text-capitalize ls-0" style="border-radius: 23px;">Start Free Trial</a></div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
     </div>
   </div>
 
