First try during the Rails upgrade

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="es-MX">
   <head>
-    <title>smsforall.org | Unlimited transactional SMS in México for free - SMS transactionales ilimitados y grátis </title>
+    <title>smsforall.org | Unlimited transactional SMS in México for free - SMS transactionales ilimitados y grátis :e</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="smsforall.org" />
@@ -10,7 +10,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    # <%= javascript_include_tag '/assets/application', 'data-turbolinks-track': 'reload' %>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Istok+Web:400,700&display=swap" rel="stylesheet" type="text/css" />
     <!--  -->
